fixed padding in portfolio item on mobile screen

--- a/src/components/portfolio/portfolioItem/portfolioItem.scss
+++ b/src/components/portfolio/portfolioItem/portfolioItem.scss
@@ -126,7 +126,7 @@
         .container{
             .wrapper{
                 gap: 10px;
-                padding: 70px 10% 0 10%;
+                padding: 110px 10% 0 10%;
         
                 .textContainer{
                     gap: 10px;
